--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Plantilla Web Pompeu</title>
+  <title>Web de Jon</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
   <style>
@@ -81,10 +81,10 @@
           <!-- Projecte 1 -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="proj1Dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fa-solid fa-diagram-project me-1"></i> Projecte 1
+              <i class="fa-solid fa-diagram-project me-1"></i> Nàutica
             </a>
             <ul class="dropdown-menu" aria-labelledby="proj1Dropdown">
-              <li><a class="dropdown-item" href="#"><i class="fa-solid fa-code me-1"></i> Projecte 1.1</a></li>
+              <li><a class="dropdown-item" href="#"><i class="fa-solid fa-code me-1"></i> Navegant</a></li>
               <li><a class="dropdown-item" href="#"><i class="fa-solid fa-database me-1"></i> Projecte 1.2</a></li>
             </ul>
           </li>
@@ -107,8 +107,9 @@
 
   <!-- Contingut -->
   <main class="container py-5">
-    <h1 class="display-5 fw-bold mb-4">Benvinguts als Projectes</h1>
-    <p class="lead">Aquesta és una plantilla web amb menú desplegable, icones Font Awesome, mode clar i fosc, i disseny responsiu per mòbil i ordinador utilitzant Bootstrap 5.3.8. Aquest és el punt de partida per editar tot i fer projectes amb el professor Francesc Pérez.</p>
+    <h1 class="display-5 fw-bold mb-4">Benvinguts a la web de Jon</h1>
+    <p class="lead"> En aquesta web veureu <u>activitats</u> i <i>projectes</i> creats per <b>Jon Gàlvez</b> de l'<a href="https://agora.xtec.cat/ies-pompeu-fabra-martorell/">Institut Pompeu Fabra. </a></p>
+    <p class="lead">Aquesta és una web amb menú desplegable, icones Font Awesome, mode clar i fosc, i disseny responsiu per mòbil i ordinador utilitzant Bootstrap 5.3.8. Aquest és el punt de partida per editar tot i fer projectes amb el professor Francesc Pérez.</p>
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
