--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
     <h1 class="display-5 fw-bold mb-4">Benvinguts a la web de Jon</h1>
     <p class="lead"> En aquesta web veureu <u>activitats</u> i <i>projectes</i> creats per <b>Jon Gàlvez</b> de l'<a href="https://agora.xtec.cat/ies-pompeu-fabra-martorell/">Institut Pompeu Fabra. </a></p>
     <p class="lead">Aquesta és una web amb menú desplegable, icones Font Awesome, mode clar i fosc, i disseny responsiu per mòbil i ordinador utilitzant Bootstrap 5.3.8. Aquest és el punt de partida per editar tot i fer projectes amb el professor Francesc Pérez.</p>
+  <p> Si vols aprendre HTML i altres llenguatges de programació hi ha molts videotutorials com aquest: </p>
+    
+<iframe width="853" height="480" src="https://www.youtube.com/embed/MJkdaVFHrto" title="Aprende HTML ahora! curso completo GRATIS desde cero" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
