--- a/cara/index.html
+++ b/cara/index.html
@@ -5,52 +5,28 @@
   </head>
   <body>
     <script>
-let mic;
-let aleatori;
-let sinus;//Crea un espai a la memòria de l'ordinador per la variable sinus
-let cosinus;
+let mic
 function setup() {
-  createCanvas(400, 400);
+  createCanvas(500, 430);
   mic=new p5.AudioIn();
   mic.start();
 }
 
 function draw() {
-  frameRate (5);
-  aleatori=random(0,400);
-  cosinus=cos(frameCount*0.01)*127;//Calcula el cosinus del número de fotograma, per exemple, si fa 60 fotogrames o frames per segon i el multiplico per 0.01 anirà més lent i calcularà el número de fotogrames
-  sinus=sin(frameCount*0.01)*30;
-  //strokeWeight(1);
-  stroke (0);
-  print("sinus",sinus)
+  //mouseX=250
+  //mouseY=215
   let vol=mic.getLevel();
-  let h=map(vol,0,1,0,1200);
-  background(220);
-  //fill (80);//0 negre 255 blanc i entre mig grisos
-  //fill (255,0,0);//Si hi ha tres números el primer és el nivell de vermell
-  //fill (0,200,0);//El segon número és el nivell de verd de 0 a 255
-  //fill (0,0,255);//El tercer número és el nivell de blau de 0 a 255
-  fill (52,127-cosinus,127+cosinus);//Color de la cara
-  ellipse (200,200,250,300);
-  fill (52,106,77);
-  ellipse (150,150,50,20);
-  ellipse (250,150,50,20);
-  fill (255,4+cosinus*2,cosinus*2);
-  arc (200,250,120+sinus,40+h*10,0,PI,CHORD);
-  mosca ();
-  mosca ();
-  mosca ();
-  
-}
-function mosca(){
-  aleatori=random(0,300);
-  print (aleatori);
-  noStroke();
-  fill (255);//Color blanc
-  ellipse(85+aleatori,100+aleatori,35,40);//Ala esquerra
-  ellipse(115+aleatori,100+aleatori,35,40);//Ala dreta
+  let h=map(vol,0,1,0,5000);
+  background(255,200,50);
+  fill(255);
+  ellipse(mouseX,mouseY,200,220);//cara
   fill (0);
-  ellipse(100+aleatori,100+aleatori,20,40);//Cos de la mosca negra
+  ellipse (mouseX-35,mouseY-45,30+h,30+h);
+  ellipse (mouseX+35,mouseY-45,30+h,30+h);
+  fill(255,0,0);//color Boca
+  arc(mouseX,mouseY+40,50+h,30+h,0,PI);//Boca
+  line(mouseX,mouseY,mouseX+70,mouseY+30+h);
+ line(mouseX,mouseY,mouseX-70,mouseY+30+h);
 }
 </script>
     </body>
