--- a/Distancia/índex.html
+++ b/Distancia/índex.html
@@ -8,13 +8,23 @@ quina distància (en graus) hi ha entre l'equador i el pol nord. L'altra coorden
 de Greenwich (que va del pol nord al pol sud) i el punt que volem.</p>
 
     <p>A la imatge anterior podem veure la longitud i la latitud de Martorell i volem saber la distància que hi té fins a Madrid.
-    Les coordenades de Martorell són: 41º 29' 15.9" N i 1ª 56' 07.6" E, i les de Madrid són: 40º 30'N i 3º 40'0.</p>
+    Les coordenades de Martorell són: 41º 29' 15.9" N i 1ª 56' 07.6" E, i les de Madrid són: 40º 30'N i -3º 40'0.</p>
     <h2> Com calculem la distància</h2>
+    <h1>Teorema de Pitàgores: la Terra és plana.</h1>
     <p>Suposem que la terra és plana i hem de calcular la diferència de latitud i la diferència de longitud i, gràcies al Teorema de Pitàgores, sabrem 
     la hipotenusa o distància mínima. Desprès suposarem que la Terra és una esfera i calcularem la distància amb la formula d'Haversine i, per últim suposarem
     que la Terra es un el·lipsoid i calcularem les distàncies am les formules de Vincenty.</p>
     <p>Primer hem de saber quants metres és un grau i per aixó utilitzarem la definició antiga de metre. Un metre és una deumilonèssima part de la
     distància entre l'equador i el pol nord. Aixó vol dir que 360 graus són 40000 quilòmetres. Podem fer un càlcul més exacte, amb el radi de la Terra
-    i 2*PI*6371=40030.173592</p>
+    i 2*PI*6371=40030.173592 quilòmetres.</p>
+    <p>La diferencia de latitud entre Martorell i Madrid és 58 minuts i 44 segons (aproximadament), és a dir, </p>
+    <p>Amb els dos números anteriors, fem pitàgores. La distància "D" serà l'arrel quadrada de 396.734054999^2. Es pot fer el càlcul directament a Google:
+    sqrt (396.734054999^2396.734054999^2)</p>
+    <p>"sqrt" vol dir "square root" o arrel quadrada i el sombreret vol dir "elevat".</p>
+    <p>El resultat es 411.132013952 en línia recta, però no és del tot exacte perquè la Terra no és plana. L'error seria més gran quant més distància tenim.</p>
+    <h2>Formula de Haversine: la Terra és una esfera perfecta.</h2>
+    <p>És una fórmula creadaper José de Mendoza y Ríos al 1801, que ajudava a calcular les distàncies i les posisicions dels vaixells.</p>
+    <p>hav 0 = sin^2(0/2), és</p>
+    <img src=
 </body>
 </html>
