--- a/genetica/index.html
+++ b/genetica/index.html
@@ -16,7 +16,10 @@
     <ol>
       <li>Injecto neumococs tipus S vius i els ratolins d'aquest grup moren tots</li>
       <li>Injecto neumococs tipus S morts i els ratolins d'aquest grup no moren</li>
-      <li>Injecto neumococs tipus R</li>
+      <li>Injecto neumococs tipus R i wls ratolins viuen</li>
+      <li>Tnjecto neumococs S morts + Neumococs R vius i els ratolins moren!</li>
     </ol>
+    <p>Griffith (1928) va dir que hi havia un principi transformant perquè convertia bacteris no virulents</p>
+    <img
   </body>
 </html>
