--- a/genetica/index.html
+++ b/genetica/index.html
@@ -20,6 +20,11 @@
       <li>Tnjecto neumococs S morts + Neumococs R vius i els ratolins moren!</li>
     </ol>
     <p>Griffith (1928) va dir que hi havia un principi transformant perquè convertia bacteris no virulents</p>
-    <img
+    <img src="griffith.png">
+    <h2>Experiment de Avery, MacLeod i McCarty (1944)</h2>
+    <p>De l'experiment anterior sabiem que hi havia una substància transformadora però no sabiem si era ADN, ARDN o si era proteïna o un altre.</p>
+    <p>Si jo barrejo neumococs S morts + neumococs R és produeix la transformació i utilitzo 4 grups de ratolins i els
+    que</p>
+    <P>El principi transformador és l'ADN.</P>
   </body>
 </html>
