--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     
 <iframe width="853" height="480" src="https://www.youtube.com/embed/MJkdaVFHrto" title="Aprende HTML ahora! curso completo GRATIS desde cero" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </main>
-  <p>Utilitzarem <a hrf="">p5.js</a> per dibuixar i <a hrf="">ml5.js</a> per identificar emocions</p>
+  <p>Utilitzarem <a hrf="https://p5js.org/es/">p5.js</a> per dibuixar i <a hrf="https://ml5js.org/">ml5.js</a> per identificar emocions</p>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   <script>
