--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
   <p> Si vols aprendre HTML i altres llenguatges de programació hi ha molts videotutorials com aquest: </p>
     
 <iframe width="853" height="480" src="https://www.youtube.com/embed/MJkdaVFHrto" title="Aprende HTML ahora! curso completo GRATIS desde cero" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+   <p class="lead">El primer codi que farem serà una cara dibuixada amb p5.js. La forma de la cara  serà una el·lipse, els ulls també la boca serà un arc
+     . Farem qu la boca es mogui amb el volum micròfon. També farem que la boca es mogui obri i es tanqui. També ho farem amb la funció sinus, que farà
+     que la boca tingui moviment.</p>
   </main>
   <p>Utilitzarem <a hrf="https://p5js.org/es/"p5.js></a> per dibuixar i <a hrf="https://ml5js.org/"ml5.js></a> per identificar emocions</p>
 
