--- a/index.html
+++ b/index.html
@@ -117,8 +117,13 @@
      . Farem qu la boca es mogui amb el volum micròfon. També farem que la boca es mogui obri i es tanqui. També ho farem amb la funció sinus, que farà
      que la boca tingui moviment.</p>
   </main>
-  <p>Utilitzarem <a hrf="https://p5js.org/es/"p5.js></a> per dibuixar i <a hrf="https://ml5js.org/"ml5.js></a> per identificar emocions</p>
-
+  <p>Utilitzarem <a href="https://p5js.org/es/"p5.js></a> per dibuixar i <a href="https://ml5js.org/"ml5.js></a> per identificar emocions</p>
+<p>Hem analitzat la contaminació de Martorell descarregant les dades de la
+  <a href="https://mediambient.gencat.cat/ca/05_ambits_dactuacio/atmosfera/qualitat_de_laire/vols-saber-que-respires/descarrega-de-dades/descarrega-dades-automatiques/index.html">
+    xarxa de prevenció i vigilància de la contaminació atmosfèrica </a>i 
+  hem utilitzat <a href="https://posit.co/download/rstudio-desktop/">R Studio</a> per fer gràfics i analitzar dades. 
+  Les dades analitzades són horàries des del 20 de novembre de 1991 fins al 31 de desembre del 2025
+  Visita la pàgina Martorell d'aquesta web per veure gràfics generats a partir d'aquestes dades. </p>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     // Mode clar/fosc amb canvi d'icona
