--- a/index.html
+++ b/index.html
@@ -81,11 +81,14 @@
           <!-- Projecte 1 -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="proj1Dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fa-solid fa-diagram-project me-1"></i> Nàutica
+              <i class="fa-solid fa-diagram-project me-1"></i> Projectes
             </a>
             <ul class="dropdown-menu" aria-labelledby="proj1Dropdown">
-              <li><a class="dropdown-item" href="#"><i class="fa-solid fa-code me-1"></i> Navegant</a></li>
-              <li><a class="dropdown-item" href="#"><i class="fa-solid fa-database me-1"></i> Projecte 1.2</a></li>
+              <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/cara"><i class="fa-solid fa-code me-1"></i> Cara</a></li>
+               <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/Distancia"><i class="fa-solid fa-code me-1"></i> Distància</a></li>
+               <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/genetica"><i class="fa-solid fa-code me-1"></i> Genètica</a></li>
+               <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/martorell"><i class="fa-solid fa-code me-1"></i> Martorell</a></li>
+              
             </ul>
           </li>
           <!-- Projecte 2 -->
