--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
   <style>
+    img{
+      width:100%;
+      height:auto;
+      display:block;
+    }
     /* 1. Submenús en mode fosc */
     body[data-bs-theme="dark"] .dropdown-menu {
       background-color: #2c2c2c !important;
