--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
                <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/Distancia"><i class="fa-solid fa-code me-1"></i> Distància</a></li>
                <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/genetica"><i class="fa-solid fa-code me-1"></i> Genètica</a></li>
                <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/martorell"><i class="fa-solid fa-code me-1"></i> Martorell</a></li>
-              
+               <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/cararatoli"><i class="fa-solid fa-code me-1"></i> Cara Ratolí</a></li>
+               <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/caramicro"><i class="fa-solid fa-code me-1"></i> Cara Cara Micròfon</a></li>
             </ul>
           </li>
           <!-- Projecte 2 -->
