--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/genetica"><i class="fa-solid fa-code me-1"></i> Genètica</a></li>
                <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/martorell"><i class="fa-solid fa-code me-1"></i> Martorell</a></li>
                <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/cararatoli"><i class="fa-solid fa-code me-1"></i> Cara Ratolí</a></li>
-               <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/caramicrofon"><i class="fa-solid fa-code me-1"></i> Cara Cara Micròfon</a></li>
+               <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/caramicrofon"><i class="fa-solid fa-code me-1"></i> Cara Micròfon</a></li>
                <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/carabasica"><i class="fa-solid fa-code me-1"></i> Cara Bàsica</a></li>
             </ul>
           </li>
