--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="proj1Dropdown">
               <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/cara"><i class="fa-solid fa-code me-1"></i> Cara</a></li>
-               <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/distancia"><i class="fa-solid fa-code me-1"></i> Distància</a></li>
+               <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/Distancia"><i class="fa-solid fa-code me-1"></i> Distància</a></li>
                <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/genetica"><i class="fa-solid fa-code me-1"></i> Genètica</a></li>
                <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/martorell"><i class="fa-solid fa-code me-1"></i> Martorell</a></li>
                <li><a class="dropdown-item" href="https://jgalvez-iu.github.io/cararatoli"><i class="fa-solid fa-code me-1"></i> Cara Ratolí</a></li>
